--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
+@import url('https://rsms.me/inter/inter.css');
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-gray-50
+      dark:bg-gray-600
+      text-gray-900
+      dark:text-gray-50
+      transition-colors;
+  }
+}
+html{ font-family: 'Inter var', sans-serif; }
